--- a/app/src/main/res/layout/fragment_third_screen.xml
+++ b/app/src/main/res/layout/fragment_third_screen.xml
@@ -1,34 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".View.WelcomePage.Screens.ThirdScreen">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background"
+        tools:context=".View.WelcomePage.Screens.ThirdScreen">
+
+        <ImageView
+            android:id="@+id/gameScreenImage"
+            android:layout_width="173dp"
+            android:layout_height="338dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="56dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/gamescreenone" />
+
+        <TextView
+            android:id="@+id/bannedWordAboutTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:text="@string/bannedWordAbout"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/gameScreenImage"
+            app:layout_constraintTop_toTopOf="@id/gameScreenImage" />
+
+        <TextView
+            android:id="@+id/teamMatesTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:text="@string/teamMates"
+            android:textColor="@color/cyan_process_blue"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/gameScreenImage"
+            app:layout_constraintTop_toBottomOf="@id/bannedWordAboutTV" />
+
+        <TextView
+            android:id="@+id/inTimeTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="@string/inTime"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="@id/bannedWordAboutTV"
+            app:layout_constraintStart_toStartOf="@id/gameScreenImage"
+            app:layout_constraintTop_toBottomOf="@id/gameScreenImage" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:text="@string/letsPlay"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@id/btnFinish"
+            app:layout_constraintEnd_toEndOf="@id/inTimeTV"
+            app:layout_constraintStart_toStartOf="@id/gameScreenImage" />
 
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="THIRD SCREEN"
-        app:layout_constraintBottom_toTopOf="@+id/btnFinish"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/btnFinish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:text="@string/finishOnBoard"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/btnFinish"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:text="@string/finishOnBoard"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
